2008-08-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_get_menu):
	use a menu-bar

	* avatar.c (cursor_color): 
        new global variable - used for the cursor and for the menu-bar

2008-07-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_len):
	allow a string to start with binary zeros

	* avatar.c (avt_say, avt_say_len, avt_put_character):
	when string is empty then at least check for events

2008-07-04  Andreas K. Foerster  <info@akfoerster.de>

	* ucsfont4x6.c, ucsfont7x14.c, ucsfont7x14B.c, ucsfont9x18.c:
	font data marked as const

2008-06-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_subprogram, ask_manpage):
	use NULL for wait, since I don't use the value anyway

2008-06-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_subprogram, ask_manpage):
	get the exitcode from subprocesses, to avoid zombie processes
	(fixes bug #23655)

2008-06-17  Andreas K. Foerster  <info@akfoerster.de>

	* lrun: simplified and no INFOPATH anymore

2008-06-15  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.1 released

2008-06-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (PATH_LENGTH):
	new macro, used instead of PATH_MAX, which may be too large

2008-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	default background color: pale brown (like the website)
	
	* avatarsay.c (run_info):
	first search for the info files in ./doc/
	
	* avtfilechooser.c:
	don't use PATH_MAX

2008-06-04  Andreas K. Foerster  <info@akfoerster.de>
	
	* avatarsay.c:
	quit-request: return to the main-menu first

	* avtfilechooser.c (get_file): improved
	* avatar.c (avt_get_menu): improved

2008-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c (get_file):
	major rewrite

	* avatar.c (avt_get_menu):
	feedback for mouse-motion in menu

2008-06-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (CSI_sequence):
	ignore CSI [ + 1 char
